[package]
authors = ["Erik Johnston"]
name = "matrix-federation"
version = "0.1.0"

[dependencies]
chrono = "0.2.19"
log = "0.3.5"
quick-error = "1.0.0"
rustc-serialize = "0.3.16"
serde = "0.8.0"
serde_json = "0.8.0"
serde_derive = "0.8.0"
sodiumoxide = "0.0.10"

[dependencies.signedjson]
git = "https://github.com/erikjohnston/rust-signedjson.git"
optional = false
